[package]
name = "common"
version = "0.4.1"
edition = "2021"

[features]
default = ["std"]
std = ["hex/std", "ssz-rs/std", "ethers-core/std", "thiserror-no-std/std"]

[dependencies]
displaydoc = { version = "0.2", default-features = false }
#eyre.workspace = true
serde.workspace = true
hex.workspace = true
ssz-rs.workspace = true
ethers-core.workspace = true
thiserror-no-std.workspace = true
